syntax = "proto3";

package agent;

option go_package = "./proto/agent";

message LA {
    double one = 1;
    double five = 2;
    double fifteen = 3;
}

message Mem {
    uint64 Total = 1;
    uint64 Used = 2;
    uint64 Free = 3;
    uint64 Buffers = 4;
    uint64 Cache = 5;
    uint64 SwapTotal = 6;
    uint64 SwapUsed = 7;
    uint64 SwapFree = 8;
}

message CPU {
    string model = 1;
    string cpu_s = 2;
    string min_MHz = 3;
    string max_MXz = 4;
}


message TopProc {
    string first_proc = 1;
    string second_proc = 2;
    string third_proc = 3;
    string fourth_proc = 4;
    string fifth_proc = 5; 
}

message ServerStat {
    CPU cpu = 1;
    LA la = 2;
    Mem mem = 3;
    TopProc top_proc = 4;
}

// 
message GetServerStatRequest {}

message GetServerStatResponse {
    ServerStat serverStat = 1;
    string err = 2;    
}

message Void {}

service agent {
    rpc GetServerStat (GetServerStatRequest) returns (GetServerStatResponse);
}